Try to fix the answers overflow..but fail

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ div.answer div.all_answers {
   padding-left: 10px;
 }
 
-div.answer div.all_answers p {
+div.answer div.all_answers p.op {
  padding-top: 5px;
  padding-bottom: 5px;
  border: 1px solid silver;
@@ -81,6 +81,17 @@ div.answer div.all_answers span.question_no {
   margin-left: 5px;
   border: 2px dotted silver;
   padding: 15px;
+}
+
+div.answer div.all_answers span.a_content {
+  display: inline-block;
+  max-width: 150px;
+  height: auto;
+  padding-top: 5px;
+}
+
+div.answer div.all_answers span.a_content span {
+  width: inherit;
 }
 
 div.answer div.all_answers p:hover {
@@ -163,6 +174,10 @@ div#my_popup table td div.pic4 {
 
 div#my_popup table td div.pic5 {
   background-image: url("../assets/prankprakma.jpg");
+}
+
+div#my_popup table td div.pic6 {
+  background-image: url("../assets/foster.jpg");
 }
 
 div#my_popup table td div.profile {
